--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <!--Refactor div tag-->
+    <!--Refactor div tag header-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!--Refactor div tag-->
+        <!--Refactor div tag nav-->
         <nav>
             <ul>
                 <li>
@@ -83,13 +83,13 @@
             </p>
         </div>
     </div>
-    <!--Refactor div tag-->
-    <div class="footer">
+    <!--Refactor div tag footer-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
