--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </ul>
         </nav>
     </header>
-    <!--Refactor div tag-->
-    <div class="hero"></div>
-    <!--Refactor div tag-->
-    <div class="content">
+    <!--Refactor div tag figure-->
+    <figure></figure>
+    <!--Refactor div tag section-->
+    <section>
         <!--Refactor div tag-->
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
@@ -55,7 +55,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <!--Refactor div tag-->
     <div class="benefits">
         <!--Refactor div tag-->
