--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
             </p>
         </div>
     </section>
-    <!--Refactor div tag-->
-    <div class="benefits">
-        <!--Refactor div tag-->
+    <!--Refactor div tag aside-->
+    <aside>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
@@ -64,7 +63,6 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <!--Refactor div tag-->
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
@@ -72,7 +70,6 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <!--Refactor div tag-->
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost Management"/>
@@ -80,7 +77,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </aside>
     <!--Refactor div tag footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
