Commit pics to repository

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <!--Refactor div tag header-->
+    <!--Refactor div tag to header-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!--Refactor div tag nav-->
+        <!--Refactor div tag to nav-->
         <nav>
             <ul>
                 <li>
@@ -27,11 +27,11 @@
             </ul>
         </nav>
     </header>
-    <!--Refactor div tag figure-->
+    <!--Refactor div tag to figure-->
     <figure></figure>
-    <!--Refactor div tag section-->
+    <!--Refactor div tag to section-->
     <section>
-        <!--Add div id-->
+        <!--Add div id to enable functionality-->
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization" />
             <h2>Search Engine Optimization</h2>
@@ -54,7 +54,7 @@
             </p>
         </div>
     </section>
-    <!--Refactor div tag aside-->
+    <!--Refactor div tag to aside-->
     <aside>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -78,7 +78,7 @@
             </p>
         </div>
     </aside>
-    <!--Refactor div tag footer-->
+    <!--Refactor div tag to footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
